--- a/src/sass/_new.scss
+++ b/src/sass/_new.scss
@@ -422,8 +422,7 @@ fieldset .form-control.has-error {
   input.upload {
     position: absolute;
     top: 0;
-    margin: 0;
-    padding: 0;
+    padding: 0 0 0 100%;
     font-size: 20px;
     cursor: pointer;
     opacity: 0;
@@ -469,11 +468,13 @@ i.fa-question-circle-o, i.fa-question {
     overflow: hidden;
 }
 .fileUpload input.upload {
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     right: 0;
     margin: 0;
-    padding: 0;
+    padding: 0 0 0 100%;
     font-size: 20px;
     cursor: pointer;
     opacity: 0;
