Added feature get node with free slots for harvesting
To harvest you need to connect to a node with free slots.
with this feature a button is provided when you are connected to a node
without free slots,
When the button is pressed the function will randomly choose a node
from the nodes provided and check if there is a slot free when there is
no slot free in that node, it will randomly choose another one. until
it found one or tried for more than 200 times.

--- a/src/app/modules/importanceTransfer/multisig/importanceTransfer.html
+++ b/src/app/modules/importanceTransfer/multisig/importanceTransfer.html
@@ -221,6 +221,14 @@
 
           <p class="bg-info text-center" ng-show="$ctrl.noFreeSlots && $ctrl.delegatedData.meta.status === 'LOCKED' && $ctrl.formData.multisigAccount.vestedBalance  / 1000000 > 10000"><i class="fa fa-exclamation-triangle "></i> {{ 'ACCOUNT_HARVESTING_NO_SLOTS' | translate }}</p>
           <p class="bg-info" ng-show="$ctrl.formData.multisigAccount.vestedBalance / 1000000 < 10000"><i class="fa fa-exclamation-triangle "></i> {{ 'ACCOUNT_HARVESTING_BELOW_THRESHOLD' | translate }}</p>
+          
+          <button class="btn btn-success ng-binding" type="button" ng-click="$ctrl.getFreeNode()" ng-show="$ctrl.noFreeSlots && $ctrl.delegatedData.meta.status === 'LOCKED' && $ctrl._DataBridge.accountData.account.vestedBalance / 1000000 > 10000">Get random node with free slots</button>
+          <div class="input-group" ng-show="$ctrl._DataBridge.accountData.account.vestedBalance / 1000000 > 10000&& $ctrl.delegatedData.meta.status === 'LOCKED' && $ctrl.noFreeSlots">
+          <input class="form-control" type="text" ng-model="$ctrl.hostNameFreeSlots"/>
+          <span class="input-group-btn">
+          <button class="btn btn-primary" type="button" ng-show="$ctrl.freeHostFound" ng-click="$ctrl.harvestingNode = $ctrl.hostNameFreeSlots; $ctrl.checkNode(); $ctrl.updateDelegatedData(); $ctrl.customHarvestingNode = true;"><i>Select</i></button>
+          </span>
+          </div>
         <!--</div>-->
         </div>
         <div class="panel-body" ng-show="!$ctrl.isActivator && $ctrl.multisigData.meta.remoteStatus === 'ACTIVE'">
