--- a/src/app/modules/importanceTransfer/normal/importanceTransfer.html
+++ b/src/app/modules/importanceTransfer/normal/importanceTransfer.html
@@ -210,7 +210,7 @@
         <div class="input-group" ng-show="$ctrl._DataBridge.accountData.account.vestedBalance / 1000000 > 10000&& $ctrl.delegatedData.meta.status === 'LOCKED' && $ctrl.noFreeSlots">
         <input class="form-control" type="text" ng-model="$ctrl.hostNameFreeSlots"/>
         <span class="input-group-btn">
-        <button class="btn btn-primary" type="button" ng-show="$ctrl.freeHostFound" ng-click="$ctrl.harvestingNode = $ctrl.hostNameFreeSlots; $ctrl.checkNode(); $ctrl.updateDelegatedData(); $ctrl.customHarvestingNode = true;"><i>Select</i></button>
+        <button class="btn btn-primary" type="button" ng-show="$ctrl.freeHostFound" ng-click="$ctrl.harvestingNode = $ctrl.hostNameFreeSlots; $ctrl.checkNode(); $ctrl.updateDelegatedData(); $ctrl.customHarvestingNode = true; $ctrl.freeHostFound=false;"><i>Select</i></button>
         </span>
         </div>
       </div>
