--- a/src/app/layout/header.html
+++ b/src/app/layout/header.html
@@ -35,6 +35,13 @@
           </a>
        </b></a>
         </li>
+        <li class="address">
+          <a style="outline:0;font-size:90%;cursor:pointer;" show-authed="true" ui-sref-active="active" ui-sref="app.account" >
+            <b>
+              <span show-account-data="address"></span>
+            </b>
+          </a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a class="login" ui-sref-active="active" ui-sref="app.login" show-authed="false"><small><b>{{ 'HEADER_LOGIN_BUTTON' | translate }}</b></small></a></li>
