--- a/src/sass/_new.scss
+++ b/src/sass/_new.scss
@@ -580,7 +580,7 @@ input[type=checkbox]:checked + label:before {
   	box-shadow: 1px 0 0 rgba(0,0,0,0.05);
   }
   .navbar-nav li {
-    &.money, &.node {
+    &.money, &.node, &.address {
       border-right: 1px solid rgba(0,0,0,0.05);
       border-left: 1px solid rgba(0,0,0,0.05);
     }
@@ -594,10 +594,16 @@ input[type=checkbox]:checked + label:before {
         color: grey;
       }
     }
-		.dropdown-menu {
-			min-width: 200px;
-			width: 200px;
-		}
+    .dropdown-menu {
+        min-width: 200px;
+        width: 200px;
+    }
+
+    @media only screen and (max-width : $lg) {
+      &.address {
+        display: none;
+      }
+    }
   }
   .login {
     text-transform: uppercase;
