Adding CoinSwitch Exchange

--- a/src/app/modules/portal/portal.html
+++ b/src/app/modules/portal/portal.html
@@ -130,6 +130,8 @@
             <button class="btn" ui-sref="app.changelly">{{ 'PORTAL_EXCHANGE_BTN' | translate }} on Changelly</button>
             <br>
             <button class="btn" ui-sref="app.shapeshift">{{ 'PORTAL_EXCHANGE_BTN' | translate }} on ShapeShift</button>
+            <br>
+            <button class="btn" ui-sref="app.coinswitch">{{ 'PORTAL_EXCHANGE_BTN' | translate }} on CoinSwitch</button>  
           </div>
         </div>
       </div>
