--- a/src/app/modules/mosaics/create/createMosaic.html
+++ b/src/app/modules/mosaics/create/createMosaic.html
@@ -230,13 +230,13 @@
                         <input class="levy" type="number" ng-model="$ctrl.formData.levy.fee" min="0" max="9000000000">
                         <span class="floatRight" ng-show="! $ctrl.levyInNewlyCreatedMosaic">
                           <label>{{ $ctrl.selectedMosaic }}</label>
-                          <label ng-show="$ctrl.formData.levy.feeType===1">{{['','(0.1)','(0.01)','(m)','(0.0001)','(0.00001)','(μ)'][$ctrl.selectedMosaicDivisibility()]}}</label>
-                          <label ng-show="$ctrl.formData.levy.feeType===2">(0.01 %)</label>
+                          <label ng-show="$ctrl.formData.levy.feeType===1">{{['','(×0.1)','(×0.01)','(×0.001)','(×0.0001)','(×0.00001)','(μ)'][$ctrl.selectedMosaicDivisibility()]}}</label>
+                          <label ng-show="$ctrl.formData.levy.feeType===2">(×0.01 %)</label>
                         </span>
                         <span class="floatRight" ng-show="$ctrl.levyInNewlyCreatedMosaic">
                           <label>{{ $ctrl.formData.namespaceParent.fqn }}:{{ $ctrl.formData.mosaicName }}</label>
-                          <label ng-show="$ctrl.formData.levy.feeType===1">{{['','(0.1)','(0.01)','(m)','(0.0001)','(0.00001)','(μ)'][$ctrl.formData.properties.divisibility]}}</label>
-                          <label ng-show="$ctrl.formData.levy.feeType===2">(0.01 %)</label>
+                          <label ng-show="$ctrl.formData.levy.feeType===1">{{['','(×0.1)','(×0.01)','(×0.001)','(×0.0001)','(×0.00001)','(μ)'][$ctrl.formData.properties.divisibility]}}</label>
+                          <label ng-show="$ctrl.formData.levy.feeType===2">(×0.01 %)</label>
                         </span>
                       </div>
                     </div>
@@ -270,18 +270,18 @@
                 <div ng-show="$ctrl.formData.levy.feeType === 1 && $ctrl.levyInNewlyCreatedMosaic">
                   {{ 'MOSAIC_DEFINITION_LEVY_FEE_TYPE_1_NOTE' | translate }}
                   <strong>{{($ctrl.formData.levy.fee | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[0]}}</strong>
-                  <span class="text-muted">.{{($ctrl.formData.levy.fee | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[1]}}</span> {{ $ctrl.formData.namespaceParent.fqn }}:{{ $ctrl.formData.mosaicName }}
+                  <span class="text-muted">.{{ ($ctrl.formData.levy.fee | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[1]}}</span> {{$ctrl.formData.namespaceParent.fqn}}:{{$ctrl.formData.mosaicName}}
                 </div>
                 <div ng-show="$ctrl.formData.levy.feeType === 2 && ! $ctrl.levyInNewlyCreatedMosaic">
                   {{ 'MOSAIC_DEFINITION_LEVY_FEE_TYPE_2_NOTE' | translate }}
                   <ul style="list-style:none">
                     <li ng-repeat="amountSend in [100, 1000, 3145, 10000, $ctrl.formData.properties.initialSupply] track by $index">
                         {{ 'MOSAIC_DEFINITION_LEVY_FEE_TYPE_2_NOTE_2' | translate }}
-                        <strong>{{(amountSend | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[0]}}</strong>
-                        <span class="text-muted">.{{(amountSend | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[1]}}</span>
+                        <strong>{{(amountSend*$ctrl.Math.pow(10, $ctrl.selectedMosaicDivisibility()) | fmtSupplyRaw:$ctrl.selectedMosaicDivisibility())[0]}}</strong>
+                        <span class="text-muted">.{{(amountSend*$ctrl.Math.pow(10, $ctrl.selectedMosaicDivisibility()) | fmtSupplyRaw:$ctrl.selectedMosaicDivisibility())[1]}}</span>
                         <span class="text-muted">{{$ctrl.formData.namespaceParent.fqn}}:</span>{{$ctrl.formData.mosaicName}} {{ 'MOSAIC_DEFINITION_LEVY_FEE_TYPE_2_NOTE_3' | translate }}
-                        <strong>{{( (amountSend * $ctrl.formData.levy.fee / 10000) | fmtSupply:$ctrl.mosaicOwned[$ctrl.selectedMosaic].mosaicId:$ctrl._DataStore.mosaic.metaData)[0]}}</strong>
-                        <span class="text-muted">.{{( (amountSend * $ctrl.formData.levy.fee / 10000) | fmtSupply:$ctrl.mosaicOwned[$ctrl.selectedMosaic].mosaicId:$ctrl._DataStore.mosaic.metaData)[1]}}</span> {{$ctrl.selectedMosaic}}
+                        <strong>{{( (amountSend * $ctrl.Math.pow(10, $ctrl.selectedMosaicDivisibility()) * $ctrl.formData.levy.fee / 10000) | fmtSupply:$ctrl.mosaicOwned[$ctrl.selectedMosaic].mosaicId:$ctrl._DataStore.mosaic.metaData)[0]}}</strong>
+                        <span class="text-muted">.{{((amountSend * $ctrl.Math.pow(10, $ctrl.selectedMosaicDivisibility()) * $ctrl.formData.levy.fee / 10000) | fmtSupply:$ctrl.mosaicOwned[$ctrl.selectedMosaic].mosaicId:$ctrl._DataStore.mosaic.metaData)[1]}}</span> {{$ctrl.selectedMosaic}}
                     </li>
                   </ul>
                 </div>
@@ -290,11 +290,11 @@
                   <ul style="list-style:none">
                     <li ng-repeat="amountSend in [100, 1000, 3145, 10000, $ctrl.formData.properties.initialSupply] track by $index">
                         {{ 'MOSAIC_DEFINITION_LEVY_FEE_TYPE_2_NOTE_2' | translate }}
-                        <strong>{{(amountSend | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[0]}}</strong>
-                        <span class="text-muted">.{{(amountSend | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[1]}}</span>
+                        <strong>{{(amountSend*$ctrl.Math.pow(10, $ctrl.formData.properties.divisibility) | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[0]}}</strong>
+                        <span class="text-muted">.{{(amountSend*$ctrl.Math.pow(10, $ctrl.formData.properties.divisibility) | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[1]}}</span>
                         <span class="text-muted">{{$ctrl.formData.namespaceParent.fqn}}:</span>{{$ctrl.formData.mosaicName}} {{ 'MOSAIC_DEFINITION_LEVY_FEE_TYPE_2_NOTE_3' | translate }}
-                        <strong>{{( (amountSend * $ctrl.formData.levy.fee / 10000) | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[0]}}</strong>
-                        <span class="text-muted">.{{( (amountSend * $ctrl.formData.levy.fee / 10000) | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[1]}}</span> {{ $ctrl.formData.namespaceParent.fqn }}:{{ $ctrl.formData.mosaicName }}
+                        <strong>{{( (amountSend * $ctrl.Math.pow(10, $ctrl.formData.properties.divisibility) * $ctrl.formData.levy.fee / 10000) | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[0]}}</strong>
+                        <span class="text-muted">.{{((amountSend * $ctrl.Math.pow(10, $ctrl.formData.properties.divisibility) * $ctrl.formData.levy.fee / 10000) | fmtSupplyRaw:$ctrl.formData.properties.divisibility)[1]}}</span> {{$ctrl.formData.namespaceParent.fqn}}:{{$ctrl.formData.mosaicName}}
                     </li>
                   </ul>
                 </div>
