--- a/src/app/modules/portal/portal.html
+++ b/src/app/modules/portal/portal.html
@@ -127,6 +127,8 @@
             <p>{{ 'PORTAL_EXCHANGE_TEXT' | translate }}</p>
           </div>
           <div class="panelFooter">
+            <button class="btn" ui-sref="app.alfacashier">{{ 'PORTAL_EXCHANGE_BTN' | translate }} on ALFAcashier</button>
+            <br>
             <button class="btn" ui-sref="app.changelly">{{ 'PORTAL_EXCHANGE_BTN' | translate }} on Changelly</button>
             <!--<br>
             <button class="btn" ui-sref="app.shapeshift">{{ 'PORTAL_EXCHANGE_BTN' | translate }} on ShapeShift</button>-->
